--- a/early-life-and-education.html
+++ b/early-life-and-education.html
@@ -18,7 +18,7 @@
 
   <h3>Early life</h3>
 
-  <p>Mihajlo Pupin was born on 9 October (27 September, OS) 1858 in the village of Idvor (in the modern-day municipality of Kovačica, Serbia) in Banat, in the Military Frontier in the Austrian Empire. He always remembered the words of his mother and cited her in his autobiography, From Immigrant to Inventor (1925): </p>
+  <p><b>Mihajlo Pupin was born on 9 October</b>(27 September, OS) 1858 in the village of Idvor (in the modern-day municipality of Kovačica, Serbia) in Banat, in the Military Frontier in the Austrian Empire. He always remembered the words of his mother and cited her in his autobiography, From Immigrant to Inventor (1925): </p>
 
   <p>“My boy, If you wish to go out into the world about which you hear so much at the neighborhood gatherings, you must provide yourself with another pair of eyes; the eyes of reading and writing. There is so much wonderful knowledge and learning in the world which you cannot get unless you can read and write. Knowledge is the golden ladder over which we climb to heaven; knowledge is the light which illuminates our path through this life and leads to a future life of everlasting glory.”</p>
 
@@ -29,9 +29,9 @@
   <p>“When I landed at Castle Garden, forty-eight years ago, I had only five cents in my pocket. Had I brought five hundred dollars, instead of five cents, my immediate career in the new, and to me perfectly strange, land would have been the same. A young immigrant such as I was then does not begin his career until he has spent all the money which he has brought with him. I brought five cents, and immediately spent it upon a piece of prune pie, which turned out to be a bogus prune pie. It contained nothing but pits of prunes. If I had brought five hundred dollars, it would have taken me a little longer to spend it, mostly upon bogus things, but the struggle which awaited me would have been the same in each case. It is no handicap to a boy immigrant to land here penniless; it is not a handicap to any boy to be penniless when he strikes out for an independent career, provided that he has the stamina to stand the hardships that may be in store for him.”</p>
 
 
-  <h4>Studies in America and Ph.D</h4>
+  <h3>Studies in America and Ph.D</h3>
 
-  <p>For the next five years in the United States, Pupin worked as a manual laborer (most notably at the biscuit factory on Cortlandt Street in Manhattan) while he learned English, Greek and Latin. He also gave private lectures. After three years of various courses, in the autumn of 1879 he successfully finished his tests and entered Columbia College, where he became known as an exceptional athlete and scholar. A friend of Pupin's predicted that his physique would make him a splendid oarsman, and that Columbia would do anything for a good oarsman. A popular student, he was elected president of his class in his Junior year. He graduated with honors in 1883 and became an American citizen at the same time.</p>
+  <p><i>For the next five years in the United States, Pupin worked as a manual laborer (most notably at the biscuit factory on Cortlandt Street in Manhattan) while he learned English, Greek and Latin. He also gave private lectures. After three years of various courses, in the autumn of 1879 he successfully finished his tests and entered Columbia College, where he became known as an exceptional athlete and scholar. A friend of Pupin's predicted that his physique would make him a splendid oarsman, and that Columbia would do anything for a good oarsman. A popular student, he was elected president of his class in his Junior year. He graduated with honors in 1883 and became an American citizen at the same time.</i></p>
 
   <p>He obtained his Ph.D. at the University of Berlin under Hermann von Helmholtz and in 1889 he returned to Columbia University to become a lecturer of mathematical physics in the newly formed Department of Electrical Engineering. Pupin's research pioneered carrier wave detection and current analysis.</p>
 
