--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   <img src="pupin.jpg" alt="Pupin slika">
   <p><b>Mihajlo Idvorski Pupin, Ph.D., LL.D. (Serbian Cyrillic: Михајло Идворски Пупин; 9 October 1858 – 12 March 1935)</b>, also known as Michael I. Pupin, was a Serbian American physicist and physical chemist.
   </p>
-  <p>Pupin is best known for his numerous patents, including a means of greatly extending the range of long-distance telephone communication by placing loading coils (of wire) at predetermined intervals along the transmitting wire (known as "pupinization").
+  <p><mark>Pupin is best known for his numerous patents, including a means of greatly extending the range of long-distance telephone communication by placing loading coils</mark> (of wire) at predetermined intervals along the transmitting wire (known as "pupinization").
   </p>
-  <p>Pupin was a founding member of National Advisory Committee for Aeronautics (NACA) on March 3, 1915, which later became NASA.
+  <p><em>Pupin was a founding member of National Advisory Committee for Aeronautics (NACA) on March 3, 1915, which later became NASA.</em>
   </p>
 </body>
 </html>
